# Headquarter

./: CMakeLists.txt
code/: CMakeLists.txt
code/client/: CMakeLists.txt  agent.c  api.c  build_client.c  client.c  command.c  command.h  data.c  data.h  filesrv.c  filesrv.h  game.h  item.c  main.c  merchant.c  merchant.h  network.c  network.h  opcodes.h  packets.c  packets.h  packets.info  title.c
code/common/: CMakeLists.txt  array.c  array.h  basics.h  build_common.c  log.c  log.h  paths.h  thread.h  time.h  uuid.h
code/common/linux/: paths.c  thread.c  time.c
code/common/win32/: paths.c  thread.c  time.c
code/portal/: CMakeLists.txt  build_portal.c  login.c  socket.c  ssl.c  ssl.h  stream.h
code/webgate/: CMakeLists.txt  base64.c  build_webgate.c  login.c  login.h  totp.c  totp.h  xml.c
data/: gw_37963.pub.txt  gw_38015.pub.txt  gw_38024.pub.txt  gw_38036.pub.txt  gw_38039.pub.txt  gw_38092.pub.txt  gw_38097.pub.txt  gw_38106.pub.txt  gw_38127.pub.txt  gw_38136.pub.txt  gw_38153.pub.txt
include/client/: Headquarter.h  constants.h
plugins/chat/: build_chat.c
tools/: dump_key.py  update_binary.py
